--- a/src/app.css
+++ b/src/app.css
@@ -1,14 +1,8 @@
-:root {
-  --main-red: #a83e1d;
-  --main-bg: #ecdecf;
-}
-
-
 body {
   margin: 0;
 }
 
-.background {
+.background-image {
   background-image: url("../public/Spel-officieel-background.jpg");
   background-size: contain;
   background-repeat: repeat;
