--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,7 @@ body {
   background-size: contain;
   background-repeat: repeat;
   width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
